--- a/public/index.html
+++ b/public/index.html
@@ -8,23 +8,23 @@
   <title>jGallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" tex>
-  <link rel="stylesheet" href="/assets/fonts/icomoon/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900">
+  <link rel="stylesheet" href="<%= BASE_URL %>assets/fonts/icomoon/style.css">
 
-  <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/css/magnific-popup.css">
-  <link rel="stylesheet" href="/assets/css/jquery-ui.css">
-  <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
-  <link rel="stylesheet" href="/assets/css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>assets/css/magnific-popup.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>assets/css/jquery-ui.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>assets/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>assets/css/owl.theme.default.min.css">
 
-  <link rel="stylesheet" href="/assets/css/bootstrap-datepicker.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>assets/css/bootstrap-datepicker.css">
 
-  <link rel="stylesheet" href="/assets/fonts/flaticon/font/flaticon.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>assets/fonts/flaticon/font/flaticon.css">
 
-  <link rel="stylesheet" href="/assets/css/aos.css">
-  <link rel="stylesheet" href="/assets/css/fancybox.min.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>assets/css/aos.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>assets/css/fancybox.min.css">
 
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>assets/css/style.css">
 
 </head>
 
@@ -34,21 +34,21 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
-  <script src="/assets/js/jquery-3.3.1.min.js"></script>
-  <script src="/assets/js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="/assets/js/jquery-ui.js"></script>
-  <script src="/assets/js/popper.min.js"></script>
-  <script src="/assets/js/bootstrap.min.js"></script>
-  <script src="/assets/js/owl.carousel.min.js"></script>
-  <script src="/assets/js/jquery.stellar.min.js"></script>
-  <script src="/assets/js/jquery.countdown.min.js"></script>
-  <script src="/assets/js/jquery.magnific-popup.min.js"></script>
-  <script src="/assets/js/bootstrap-datepicker.min.js"></script>
-  <script src="/assets/js/aos.js"></script>
+  <script src="<%= BASE_URL %>assets/js/jquery-3.3.1.min.js"></script>
+  <script src="<%= BASE_URL %>assets/js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="<%= BASE_URL %>assets/js/jquery-ui.js"></script>
+  <script src="<%= BASE_URL %>assets/js/popper.min.js"></script>
+  <script src="<%= BASE_URL %>assets/js/bootstrap.min.js"></script>
+  <script src="<%= BASE_URL %>assets/js/owl.carousel.min.js"></script>
+  <script src="<%= BASE_URL %>assets/js/jquery.stellar.min.js"></script>
+  <script src="<%= BASE_URL %>assets/js/jquery.countdown.min.js"></script>
+  <script src="<%= BASE_URL %>assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="<%= BASE_URL %>assets/js/bootstrap-datepicker.min.js"></script>
+  <script src="<%= BASE_URL %>assets/js/aos.js"></script>
 
-  <script src="/assets/js/jquery.fancybox.min.js"></script>
+  <script src="<%= BASE_URL %>assets/js/jquery.fancybox.min.js"></script>
 
-  <script src="/assets/js/main.js"></script>
+  <script src="<%= BASE_URL %>assets/js/main.js"></script>
 </body>
 
 </html>
